--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Kenneth Koski <kennethkoski@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+anyhow = "1.0"
 clap = "=3.0.0-beta.2"
-failure = "0.1"
-juju-rs = { git = "https://github.com/knkski/rust-libjuju.git", rev = "c0c1fa3" }
+juju-rs = { git = "https://github.com/knkski/rust-libjuju.git", rev = "baa1a13" }
 structopt = "0.2"
 tempfile = "3.1"
